@@ -1,3 +1,13 @@
+2007-06-18  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gnome-settings-typing-break.c: converted to new arch.
+
+	* gnome-settings-daemon.c: use new converted modules.
+
+	* Makefile.am: removed unneeded header files.
+
+	* factory.c (main): call g_thread_init to avoid warnings.
+
 2007-06-18  Jens Granseuer  <jensgr@gmx.net>
 
 	* Makefile.am: remove non-existing gnome-settings-xsettings.h
